[package]
name = "rss2pan"
version = "0.2.3"
edition = "2021"
description = "Download RSS subscriptions to 115 offline tasks"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.8"
bytes = "1.10"
clap = { version = "4.5.4", features = ["cargo"] }
chrono = "0.4.23"
dirs = "5.0.1"
url = "2.2.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "socks", "rustls-tls", "charset", "http2", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4.0"
env_logger = "0.11.3"
regex = "1"
rand = "0.8.5"
num-bigint = "0.4.4"
base64 = "0.22.0"
curl = { version = "0.4", features = ["static-curl"] }

[target.'cfg(target_env = "musl")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
